# simppl

./: README.md  pyproject.toml  showcase.ipynb  simppl_test.ipynb
.github/workflows/: python-package.yml
simppl/: computation_registry.py  distributions.py  inference.py  registry.py  utils.py  viz.py
tests/: test_simppl.py
