[tool.poetry]
name = "simppl"
version = "0.1.0"
description = "The simple probabilistic programming language"
authors = ["Pablo Cordero <dimenwarper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
scikit-learn = "^0.23.2"
numpy = "^1.19.2"
scipy = "^1.5.3"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
tqdm = "^4.50.2"

[tool.poetry.dev-dependencies]
scikit-learn = "^0.23.2"
numpy = "^1.19.2"
scipy = "^1.5.3"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
tqdm = "^4.50.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
